# 2019-cap1-2019_6

./: DataTrain_guide.md  HaarCascade_guide.md  HarrCascade_guide.md  README.md  finger.py  guide.md  index.html  index.md  openVINO-guide.md  openVINO_guide.md  train_guide.md
doc/최종발표 자료/: BeEyes_Video.md
doc/회의록/: 회의록-201903016.docx  회의록-20190304.docx  회의록-20190307.docx  회의록-20190308.docx  회의록-20190312.docx  회의록-20190316.docx  회의록-20190318.docx  회의록-20190327.docx  회의록-20190329.docx  회의록-20190401.docx  회의록-20190403.docx  회의록-20190405.docx  회의록-20190407.docx  회의록-20190409.docx  회의록-20190411.docx  회의록-20190413.docx  회의록-20190415.docx  회의록-20190416.docx  회의록-20190417.docx  회의록-20190418.docx  회의록-20190419.docx  회의록-20190423.docx  회의록-20190426.docx  회의록-20190429.docx  회의록-20190502.docx  회의록-20190503.docx  회의록-20190506.docx  회의록-20190507.docx  회의록-20190508.docx  회의록-20190510.docx  회의록-20190514.docx  회의록-20190515.docx  회의록-20190519.docx  회의록-20190521.docx  회의록-20190524.docx  회의록-20190527.docx
src/: ttsitt.py
src/DataTrain/: textReplace.py
src/Final/: final_beEyes_TTSITT.py  final_beEyes_objectDetection.py
src/FingerDetection/: hand_cascade.py
src/OpenVINO/OpenVINO_YOLO+Hand_Detection/: beeyes-test.py  hand.xml  (+1 more)
src/OpenVINO/set_environment_for_RasbianOS/inference_engine_vpu_arm/opencv/samples/: CMakeLists.txt  README.md  facedetector.cpp  facerecognizer.cpp  fdfr.cpp
src/darknet/: BeEyes-8a3077c1a3bc.json  BeEyes-f618af749c06.json  Makefile  bad.list  tts-test.py  ttsitt.py
src/finger_detection/: detection.cpp  detection.py  example.py  fingertest.py
(+1492 files in other folders)
